--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'//导入retrofit
+    compile 'com.google.code.gson:gson:2.6.2'//Gson 库
+//下面两个是RxJava 和 RxAndroid
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compile 'io.reactivex.rxjava2:rxjava:2.x.y'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'//转换器，请求结果转换成Model
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.google.android.material:material:1.0.0'//配合Rxjava 使用
 }
